--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "disposable-email-domains": "^1.0.62",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.11",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
-    "validator": "^13.9.0"
+    "validator": "^13.12.0"
   }
 }
