--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@testing-library/jest-dom": "^5.17.0",
