--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "validator": "^13.12.0"
-  }
+  },
+  {
+  "name": "your-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:8080"
 }
