designing of shop page frontent + Backend

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-MONGO_URL=
-PORT=8080
+MONGO_URL= "mongodb+srv://snehamenat029:sneha_029@cluster0.5domade.mongodb.net/GSSOC'24?retryWrites=true&w=majority&appName=Cluster0"
+PORT=8080 
