--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.4",
     "tailwindcss": "^3.4.4",
     "web-vitals": "^2.1.4"
