--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.6.11",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "react-router-dom": "^6.26.2",
     "validator": "^13.12.0"
   },
   "your-frontend": {
