--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@ MONGO_URL=mongodb://localhost:27017
 PORT=8080
 REFRESH_TOKEN_COOKIE_EXPIRE=30
 REFRESH_TOKEN_SECRET=XYZ
+GOOGLE_CLIENT_ID=your_client_id
+GOOGLE_CLIENT_SECRET=your_client_secret
