--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.11",
     "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "validator": "^13.12.0"
   },
   "your-frontend": {
