Ignore distribution and packaging files

--- a/client/src/Components/AI-BookRecommdation/.gitignore
+++ b/client/src/Components/AI-BookRecommdation/.gitignore
@@ -10,3 +10,23 @@ __pycache__/
 # C extensions
 *.so
 
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
