--- a/client/src/Components/AI-BookRecommdation/.gitignore
+++ b/client/src/Components/AI-BookRecommdation/.gitignore
@@ -40,3 +40,18 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
