--- a/client/src/Components/AI-BookRecommdation/.gitignore
+++ b/client/src/Components/AI-BookRecommdation/.gitignore
@@ -55,3 +55,17 @@ coverage.xml
 .pytest_cache/
 cover/
 
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
