Add sample.config.toml for AI Book Recommendation configuration

--- a/client/src/Components/AI-BookRecommdation/sample.config.toml
+++ b/client/src/Components/AI-BookRecommdation/sample.config.toml
@@ -11,3 +11,8 @@ Home Before Dark, Riley Sager
 The Invisible Life of Addie LaRue, V.E. Schwab
 """
 
+[prompts]
+system_message = "You are an AI Literary Recommendation Engine, providing book suggestions based on the given book titles, genres, and descriptions."
+human_message = """
+    %INSTRUCTIONS:
+    Task:
