--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ REFRESH_TOKEN_COOKIE_EXPIRE=30
 REFRESH_TOKEN_SECRET=XYZ
 GOOGLE_CLIENT_ID=your_client_id
 GOOGLE_CLIENT_SECRET=your_client_secret
+SMTP_EMAIL=your-email@gmail.com
+SMTP_PASSWORD=your-email-password
+
