Add description of your changes

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "disposable-email-domains": "^1.0.62",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.11",
