--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "client": "file:",
     "flowbite-react": "^0.10.2",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
@@ -24,7 +25,8 @@
     "styled-components": "^6.1.12",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
